--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,8 @@ body{
 	background: black;
 	color:lightgrey;
 	font-size: 28px;
+  font-family: 'Inconsolata', monospace;
+  font-weight: bold;
 }
 
 #pojemnik{
@@ -31,4 +33,33 @@ body{
 	width: 450px;
 	text-align: center;
 	min-height: 280px;
+}
+
+.litera{
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 5px;
+  margin: 5px;
+  border:3px solid grey;
+  float: left;
+  cursor: pointer;
+  border-radius: 15px;
+  
+  &:hover{
+    background: #222222;
+    color: white;
+    border:3px solid white;
+  }
+}
+
+.reset{
+  color:green;
+  cursor: pointer;
+  font-size: 48px;
+  
+  &:hover{
+    color:white;
+  }
+  
 }
